Ordering by preference has been completed. The project is complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,20 @@
     <string name="no_internet">No internet connection.</string>
     <string name="settings_menu_item">Settings</string>
     <string name="settings_title">News Settings</string>
-    <string name="settings_earliest_date_label">Earliest Year</string>
-    <string name="settings_earliest_date_key" translatable="false">early_date</string>
-    <string name="settings_earliest_date_default" translatable="false">2018</string>
+
     <string name="settings_keyword_label">Write a keyword</string>
     <string name="settings_keyword_key" translatable="false">keyword</string>
     <string name="settings_keyword_default" translatable="false">music</string>
+
+    <string name="settings_order_by_label">Order by</string>
+    <string name="settings_order_by_key" translatable="false">order_by</string>
+    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>
+
+    <string name="settings_order_by_relevance_label">Relevance</string>
+    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
+
+    <string name="settings_order_by_newest_label">Newest</string>
+    <string name="settings_order_by_newest_value" translatable="false">newest</string>
+
+
 </resources>
